# rollenKurator

./: .autobash  .gitignore  ChangeLog.md  LICENSE  README.org  Setup.hs  bin  cabal.sandbox.config  rollenKurator.cabal  stack.yaml  typescript
.stack-work/install/x86_64-linux/lts-7.4/8.0.1/flag-cache/: QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  alex-3.1.7  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  c2hs-0.28.1  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  happy-1.19.5  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  language-c-0.5.0-KkTEVrVTsdGLRFYbCk63u9  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  ncurses-0.2.16-ELvKnq4djwE8B6MRMZizBh  optparse-applicative-0.12.1.0-LOTKI1ZYRJkF3RPPjfyooJ  posix-pty-0.2.1-FkyZ8cGa5MJ2IRseX3up7e  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  rollenKurator-0.1.0.0  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  syb-0.6-C65vWCsht6A8uLstpQIXyj  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  unordered-containers-0.2.7.1-Eo9jd5DMz45DhBLCG8skzW  vector-0.11.0.0-BEDZb5o2QOhGbIm6ky7rl6
.stack-work/install/x86_64-linux/lts-7.4/8.0.1/lib/x86_64-linux-ghc-8.0.1/ncurses-0.2.16-ELvKnq4djwE8B6MRMZizBh/UI/: NCurses.dyn_hi  NCurses.hi
.stack-work/install/x86_64-linux/lts-7.4/8.0.1/pkgdb/: ncurses-0.2.16-ELvKnq4djwE8B6MRMZizBh.conf  package.cache  posix-pty-0.2.1-FkyZ8cGa5MJ2IRseX3up7e.conf
src/: Main.hs
(+10 files in other folders)
